ui improvements and refactoring

--- a/src/AppointmentSystem.Web/Components/AppointmentDetailDialog.razor
+++ b/src/AppointmentSystem.Web/Components/AppointmentDetailDialog.razor
@@ -172,10 +172,7 @@
 
     void Cancel() 
     {
-        if (MudDialog != null)
-        {
-            MudDialog.Close();
-        }
+        MudDialog?.Close();
     }
 }
 
