--- a/src/AppointmentSystem.Web/Components/ConfirmDialog.razor
+++ b/src/AppointmentSystem.Web/Components/ConfirmDialog.razor
@@ -9,8 +9,8 @@
         <MudText>@Message</MudText>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">@CancelText</MudButton>
-        <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="Submit">@ConfirmText</MudButton>
+        <MudButton ButtonType="ButtonType.Button" OnClick="Cancel">@CancelText</MudButton>
+        <MudButton ButtonType="ButtonType.Button" Color="Color.Primary" Variant="Variant.Filled" OnClick="Submit">@ConfirmText</MudButton>
     </DialogActions>
 </MudDialog>
 
@@ -24,18 +24,12 @@
 
     private void Submit() 
     {
-        if (MudDialog != null)
-        {
-            MudDialog.Close(DialogResult.Ok(true));
-        }
+        MudDialog?.Close(DialogResult.Ok(true));
     }
     
     private void Cancel() 
     {
-        if (MudDialog != null)
-        {
-            MudDialog.Close(DialogResult.Cancel());
-        }
+        MudDialog?.Close(DialogResult.Cancel());
     }
 }
 
